error with access a DB fix

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -27,9 +27,10 @@
 <body>
 
 <p><b>Start typing a name in the input field below:</b></p>
-<form> 
-First name: <input id="field" type="text">
-</form>
+
+    <input placeholder="  Estas buscando algo en especifico?" id="field" type="text" class="validate">
+<button id="button" class="waves-effect waves-light btn"> search </button>
+
 <p>Suggestions: <span id="txtHint"></span></p>
 <div class="main-container"> </div>
 
